Improve front-end responsiveness

--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -29,7 +29,7 @@
       </ul>
 
       <!-- Botones móviles -->
-      <div class="d-lg-none mt-3 d-flex gap-3 justify-content-center">
+      <div class="nav-mobile-actions d-lg-none mt-3 d-flex gap-3 justify-content-center">
         <a href="#" class="nav-icon-btn-mobile" id="openFaqBtnMobile">
           <i class="bi bi-question-circle me-2"></i>FAQ
         </a>
@@ -38,30 +38,35 @@
           <span class="cart-badge-mobile">0</span>
         </a>
       </div>
+
+      <div class="navbar-auth-mobile d-lg-none mt-3" data-auth-group="login">
+        <a href="./pages/Register.html" class="btn btn-outline-light rounded-pill">Registro</a>
+        <a href="./pages/Login.html" class="btn btn-light rounded-pill text-turquesa">Acceder</a>
+      </div>
+
+      <div class="navbar-auth-mobile d-lg-none mt-3 d-none" data-auth-group="logout">
+        <a href="./pages/profile.html" class="btn btn-outline-light rounded-pill" id="profile-btn-mobile">Mi Cuenta</a>
+        <button type="button" class="btn btn-danger rounded-pill" data-logout-btn>Salir</button>
+      </div>
     </div>
 
-          <div class="d-none d-lg-flex ms-3 align-items-center gap-2">
-          <a href="#" class="nav-icon-btn" id="openCartBtn" title="Carrito de Compras">
-            <i class="bi bi-cart3"></i>
-            <span class="cart-badge">0</span>
-          </a>
-          
-          <div id="auth-group" class="d-flex gap-2">
-            <a href="./pages/Register.html" class="btn btn-outline-light rounded-pill me-2">Registro</a>
-            <a href="./pages/Login.html" class="btn btn-light rounded-pill text-turquesa">Acceder</a>
-          </div>
-          
-          <div id="logout-group" class="d-flex gap-2 d-none">
-            <a href="./pages/profile.html" class="btn btn-outline-light rounded-pill me-2" id="profile-btn">Mi Cuenta</a>
-            <button id="logout-btn" class="btn btn-danger rounded-pill">Salir</button>
-          </div>
-        </div>
-  
-  <div id="logout-group" class="d-flex gap-2 d-none">
-    <a href="./pages/profile.html" class="btn btn-outline-light rounded-pill me-2" id="profile-btn">Mi Cuenta</a>
-    <button id="logout-btn" class="btn btn-danger rounded-pill">Salir</button>
+    <div class="d-none d-lg-flex ms-3 align-items-center gap-2">
+      <a href="#" class="nav-icon-btn" id="openCartBtn" title="Carrito de Compras">
+        <i class="bi bi-cart3"></i>
+        <span class="cart-badge">0</span>
+      </a>
+
+      <div class="d-flex gap-2" data-auth-group="login">
+        <a href="./pages/Register.html" class="btn btn-outline-light rounded-pill me-2">Registro</a>
+        <a href="./pages/Login.html" class="btn btn-light rounded-pill text-turquesa">Acceder</a>
+      </div>
+
+      <div class="d-flex gap-2 d-none" data-auth-group="logout">
+        <a href="./pages/profile.html" class="btn btn-outline-light rounded-pill me-2" id="profile-btn">Mi Cuenta</a>
+        <button type="button" class="btn btn-danger rounded-pill" data-logout-btn>Salir</button>
+      </div>
+    </div>
   </div>
-</div>
 </nav>
 
 <!--  HERO / CARRUSEL -->
