--- a/Front-end/pages/Products.html
+++ b/Front-end/pages/Products.html
@@ -30,7 +30,7 @@
             </ul>
 
             <!-- Botones móviles -->
-            <div class="d-lg-none mt-3 d-flex gap-3 justify-content-center">
+            <div class="nav-mobile-actions d-lg-none mt-3 d-flex gap-3 justify-content-center">
                 <a href="#" class="nav-icon-btn-mobile" id="openFaqBtnMobile">
                     <i class="bi bi-question-circle me-2"></i>FAQ
                 </a>
@@ -38,6 +38,16 @@
                     <i class="bi bi-cart3 me-2"></i>Carrito
                     <span class="cart-badge-mobile">0</span>
                 </a>
+            </div>
+
+            <div class="navbar-auth-mobile d-lg-none mt-3" data-auth-group="login">
+                <a href="./Register.html" class="btn btn-outline-light rounded-pill">Registro</a>
+                <a href="./Login.html" class="btn btn-light rounded-pill text-turquesa">Acceder</a>
+            </div>
+
+            <div class="navbar-auth-mobile d-lg-none mt-3 d-none" data-auth-group="logout">
+                <a href="./profile.html" class="btn btn-outline-light rounded-pill">Mi Cuenta</a>
+                <button type="button" class="btn btn-danger rounded-pill" data-logout-btn>Salir</button>
             </div>
         </div>
 
@@ -47,15 +57,15 @@
             <i class="bi bi-cart3"></i>
             <span class="cart-badge">0</span>
           </a>
-          
-          <div id="auth-group" class="d-flex gap-2">
+
+          <div class="d-flex gap-2" data-auth-group="login">
             <a href="./Register.html" class="btn btn-outline-light rounded-pill me-2">Registro</a>
             <a href="./Login.html" class="btn btn-light rounded-pill text-turquesa">Acceder</a>
           </div>
-          
-          <div id="logout-group" class="d-flex gap-2 d-none">
-            <a href="./profile.html" class="btn btn-outline-light rounded-pill me-2" id="profile-btn">Mi Cuenta</a>
-            <button id="logout-btn" class="btn btn-danger rounded-pill">Salir</button>
+
+          <div class="d-flex gap-2 d-none" data-auth-group="logout">
+            <a href="./profile.html" class="btn btn-outline-light rounded-pill me-2">Mi Cuenta</a>
+            <button type="button" class="btn btn-danger rounded-pill" data-logout-btn>Salir</button>
           </div>
         </div>
     </div>
