--- a/Front-end/pages/ShoppingCart.html
+++ b/Front-end/pages/ShoppingCart.html
@@ -21,16 +21,30 @@
                 <ul class="navbar-nav gap-3">
                     <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="./Products.html">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./Reserve.html">Reserva</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./Reserve.html">Servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="./About.html">Acerca de Nosotros</a></li>
                     <li class="nav-item"><a class="nav-link" href="./Contact.html">Contacto</a></li>
                 </ul>
 
                 <!-- Botones móviles -->
-                <div class="d-lg-none mt-3 d-flex gap-3 justify-content-center">
+                <div class="nav-mobile-actions d-lg-none mt-3 d-flex gap-3 justify-content-center">
                     <a href="#" class="nav-icon-btn-mobile" id="openFaqBtnMobile">
                         <i class="bi bi-question-circle me-2"></i>FAQ
                     </a>
+                    <a href="#" class="nav-icon-btn-mobile position-relative" id="openCartBtnMobile">
+                        <i class="bi bi-cart3 me-2"></i>Carrito
+                        <span class="cart-badge-mobile">0</span>
+                    </a>
+                </div>
+
+                <div class="navbar-auth-mobile d-lg-none mt-3" data-auth-group="login">
+                    <a href="./Register.html" class="btn btn-outline-light rounded-pill">Registro</a>
+                    <a href="./Login.html" class="btn btn-light rounded-pill text-turquesa">Acceder</a>
+                </div>
+
+                <div class="navbar-auth-mobile d-lg-none mt-3 d-none" data-auth-group="logout">
+                    <a href="./profile.html" class="btn btn-outline-light rounded-pill">Mi Cuenta</a>
+                    <button type="button" class="btn btn-danger rounded-pill" data-logout-btn>Salir</button>
                 </div>
             </div>
 
@@ -40,15 +54,15 @@
             <i class="bi bi-cart3"></i>
             <span class="cart-badge">0</span>
           </a>
-          
-          <div id="auth-group" class="d-flex gap-2">
+
+          <div class="d-flex gap-2" data-auth-group="login">
             <a href="./Register.html" class="btn btn-outline-light rounded-pill me-2">Registro</a>
             <a href="./Login.html" class="btn btn-light rounded-pill text-turquesa">Acceder</a>
           </div>
-          
-          <div id="logout-group" class="d-flex gap-2 d-none">
+
+          <div class="d-flex gap-2 d-none" data-auth-group="logout">
             <a href="./profile.html" class="btn btn-outline-light rounded-pill me-2" id="profile-btn">Mi Cuenta</a>
-            <button id="logout-btn" class="btn btn-danger rounded-pill">Salir</button>
+            <button type="button" class="btn btn-danger rounded-pill" data-logout-btn>Salir</button>
           </div>
         </div>
         </div>
