Refine team card details for Luz and fix minor issues

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <a href="#servicios" class="btn btn-light rounded-pill px-5 py-3 text-turquesa fw-bold">Explorar Servicios</a>
         </div>
       </div>
-      <div class="carousel-item" style="background-image:url('/Front-end/images/Nuevas/1000484075.jpg ')">
+      <div class="carousel-item" style="background-image:url('/Front-end/images/Nuevas/1000484075.jpg')">
         <div class="hero-overlay"></div>
         <div class="carousel-caption d-flex flex-column justify-content-center align-items-center text-center">
           <h1 class="display-3 fw-bold mb-3">Cuidado Profesional</h1>
@@ -187,11 +187,31 @@
     <h2 class="display-5 fw-bold text-gris-humo mb-3">Conoce a Nuestro Equipo</h2>
     <p class="text-muted mb-5">Profesionales apasionados dedicados a tu bienestar.</p>
     <div class="carousel-3d">
-      <div class="team-card"><img src="/Front-end/images/Nuevas/IMG_20251027_212555.jpg" alt="A"><h5>La patrona</h5><p>Frontend Developer</p></div>
-      <div class="team-card"><img src="/Front-end/images/Nuevas/IMG_20251027_223127.jpg" alt="J"><h5>La compañera</h5><p>Masajista Profesional</p></div>
-      <div class="team-card"><img src="https://randomuser.me/api/portraits/women/15.jpg" alt="L"><h5>Laura Martínez</h5><p>Facialista</p></div>
-      <div class="team-card"><img src="https://randomuser.me/api/portraits/men/12.jpg" alt="J"><h5>José Rojas</h5><p>Coordinador de Bienestar</p></div>
-      <div class="team-card"><img src="https://randomuser.me/api/portraits/women/16.jpg" alt="S"><h5>Sofía Morales</h5><p>Aromaterapeuta</p></div>
+      <div class="team-card">
+        <img src="/Front-end/images/Nuevas/IMG_20251027_212555.jpg" alt="Retrato de la directora del spa">
+        <h5>La patrona</h5>
+        <p>Frontend Developer</p>
+      </div>
+      <div class="team-card">
+        <img src="/Front-end/images/Nuevas/IMG_20251027_223127.jpg" alt="Retrato de la masajista principal">
+        <h5>La compañera</h5>
+        <p>Masajista Profesional</p>
+      </div>
+      <div class="team-card">
+        <img src="https://randomuser.me/api/portraits/women/15.jpg" alt="Retrato de Luz Hernández, especialista en faciales">
+        <h5>Luz Hernández</h5>
+        <p>Especialista en Faciales</p>
+      </div>
+      <div class="team-card">
+        <img src="https://randomuser.me/api/portraits/men/12.jpg" alt="Retrato de José Rojas, coordinador de bienestar">
+        <h5>José Rojas</h5>
+        <p>Coordinador de Bienestar</p>
+      </div>
+      <div class="team-card">
+        <img src="https://randomuser.me/api/portraits/women/16.jpg" alt="Retrato de Sofía Morales, aromaterapeuta">
+        <h5>Sofía Morales</h5>
+        <p>Aromaterapeuta</p>
+      </div>
     </div>
     <div class="carousel-controls">
       <button id="prev" class="btn me-3"><i class="bi bi-chevron-left"></i></button>
@@ -240,7 +260,7 @@
           <li class="mb-2"><a href="../Front-end/pages/Products.html" class="text-muted text-decoration-none">Productos</a></li>
           <li class="mb-2"><a href="../Front-end/pages/Reserve.html" class="text-muted text-decoration-none">Reserva</a></li>
           <li class="mb-2"><a href="../Front-end/pages/About.html" class="text-muted text-decoration-none">Acerca de Nosotros</a></li>
-          <li class="mb-2"><a href="../Front-end//pages/Contact.html" class="text-muted text-decoration-none">Contacto</a></li>
+          <li class="mb-2"><a href="../Front-end/pages/Contact.html" class="text-muted text-decoration-none">Contacto</a></li>
         </ul>
       </div>
 
