--- a/Front-end/pages/Register.html
+++ b/Front-end/pages/Register.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Registro de usuario - H&B SPA</title>
 
   <!-- Preload critical fonts -->
