--- a/Front-end/pages/aviso_privacidad.html
+++ b/Front-end/pages/aviso_privacidad.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aviso de Privacidad - H&B SPA Jardín Balbuena</title>
     <!-- Preload critical fonts -->
     <link rel="preload" href="../styles/fonts/Lato/Lato-Regular.ttf" as="font" type="font/ttf" crossorigin>
