--- a/Front-end/pages/Products.html
+++ b/Front-end/pages/Products.html
@@ -51,7 +51,6 @@
             </div>
         </div>
 
-        <!-- Botones desktop -->
         <div class="d-none d-lg-flex ms-3 align-items-center gap-2">
           <a href="#" class="nav-icon-btn" id="openCartBtn" title="Carrito de Compras">
             <i class="bi bi-cart3"></i>
@@ -76,14 +75,12 @@
         <h1 class="display-4 fw-bold mb-3" style="color: var(--gris-humo);">
             <i class="bi bi-shop-window me-3" style="color: var(--turquesa-pastel);"></i>Nuestros Productos
         </h1>
-        <p class="lead text-muted">Descubre nuestra selección de productos artesanales para tu bienestar</p>
+        <p class="lead text-muted">Descubre nuestra selección de productos para tu bienestar</p>
     </div>
     <div class="row" id="product-list">
-        <!-- Se rellenará dinámicamente desde products.js -->
     </div>
 </div>
 
-<!-- FOOTER -->
 <footer class="bg-light pt-5 pb-3 mt-5">
   <div class="container">
     <div class="d-flex justify-content-evenly flex-wrap text-center text-md-start">
@@ -125,7 +122,6 @@
       </div>
     </div>
 
-    <!-- Divider y copyright-->
     <hr class="my-4">
     <div class="row">
       <div class="col-12 text-center">
@@ -139,10 +135,9 @@
   </div>
 </footer>
 
-<!-- Scripts: navbar behavior, FAQ button, Bootstrap -->
+
 <script src="../scripts/app.js"></script>
 
-<!-- MODAL FAQ -->
 <div id="faqModal" class="side-modal">
   <div class="side-modal-content">
     <div class="side-modal-header">
@@ -159,7 +154,6 @@
   </div>
 </div>
 
-<!-- MODAL CARRITO -->
 <div id="cartModal" class="side-modal">
   <div class="side-modal-content">
     <div class="side-modal-header">
@@ -190,12 +184,10 @@
   </div>
 </div>
 
-<!-- BOTÓN FLOTANTE FAQ -->
 <button id="floatingFaqBtn" class="floating-faq-btn" title="Preguntas Frecuentes">
   <i class="bi bi-question-circle-fill"></i>
 </button>
 
-<!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="../scripts/products.js"></script>
 <script src="../scripts/faq-data.js"></script>
