--- a/Front-end/pages/Reserve.html
+++ b/Front-end/pages/Reserve.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Servicios - H&B SPA Jardín Balbuena</title>
-    <!-- Preload critical fonts -->
+
     <link rel="preload" href="../styles/fonts/Lato/Lato-Regular.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="../styles/fonts/Lora/Lora-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,6 @@
                 <li class="nav-item"><a class="nav-link" href="./Contact.html">Contacto</a></li>
             </ul>
 
-            <!-- Botones móviles -->
             <div class="nav-mobile-actions d-lg-none mt-3 d-flex gap-3 justify-content-center">
                 <a href="#" class="nav-icon-btn-mobile" id="openFaqBtnMobile">
                     <i class="bi bi-question-circle me-2"></i>FAQ
@@ -76,24 +75,15 @@
     <section class="servicios-section">
       <h1 class="text-center mb-4 fw-bold text-turquesa">Servicios</h1>
 
-      <!-- Filtro por categoría -->
-      <div class="filtro-categorias">
-        <label for="categoriaSelect">Filtrar por categoría:</label>
-        <select id="categoriaSelect">
-          <option value="todos">Todos</option>
-          <!-- Las categorías se llenan dinámicamente -->
-        </select>
+      <div class="filtro-categorias" id="categoriaButtons">
       </div>
 
-      <!-- Estado de carga -->
       <div id="loadingServices" class="loading-container">
         <div class="spinner"></div>
-        <p class="loading-text">Cargando servicios disponibles...</p>
+      
       </div>
 
-      <!-- Cards de servicios -->
-      <div id="servicesGrid" class="services-grid placeholder">
-        <!-- Cards generadas dinámicamente -->
+      <div id="servicesGrid" class="services-grid ">
       </div>
     </section>
   </div>
