--- a/Front-end/pages/terminos_condiciones.html
+++ b/Front-end/pages/terminos_condiciones.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Aviso de Privacidad - H&B SPA Jardín Balbuena</title>
-    <!-- Preload critical fonts -->
+
     <link rel="preload" href="../styles/fonts/Lato/Lato-Regular.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="preload" href="../styles/fonts/Lora/Lora-VariableFont_wght.ttf" as="font" type="font/ttf" crossorigin>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -87,7 +87,7 @@
 
       <section>
         <h5>Agendamiento y Reagendamiento</h5>
-        <p>Agendar vía WhatsApp al 📱 5562316302. Reagendar con mínimo 24 horas de anticipación para conservar el depósito de $150.</p>
+        <p>Agendar vía WhatsApp al 5562316302. Reagendar con mínimo 24 horas de anticipación para conservar el depósito de $150.</p>
       </section>
 
       <section>
@@ -127,11 +127,10 @@
     </div>
 </main>  
 
-<!-- FOOTER -->
 <footer class="pt-5 pb-3" id="contacto" style="margin-top: 0;">
   <div class="container">
     <div class="d-flex justify-content-evenly flex-wrap text-center text-md-start">
-      <!-- Columna 1 -->
+
       <div class="mb-4">
         <h5 class="fw-bold mb-3">H&B SPA Jardín Balbuena</h5>
         <p class="text-muted">Tu refugio de belleza y bienestar desde 2015.</p>
@@ -140,7 +139,6 @@
         <p class="text-muted"><i class="bi bi-envelope-fill me-2"></i>contacto@hbspa.com</p>
       </div>
 
-      <!-- Columna 2 -->
       <div class="mb-4">
         <h5 class="fw-bold mb-3">Enlaces Rápidos</h5>
         <ul class="list-unstyled">
@@ -152,7 +150,6 @@
         </ul>
       </div>
 
-      <!-- Columna 3 -->
       <div class="mb-4">
         <h5 class="fw-bold mb-3">Síguenos</h5>
         <div class="d-flex justify-content-start gap-3 mb-3">
@@ -169,7 +166,7 @@
       </div>
     </div>
 
-    <!-- Divider y copyright igual -->
+
     <hr class="my-4">
     <div class="row">
       <div class="col-12 text-center">
@@ -183,7 +180,6 @@
   </div>
 </footer>
 
-<!-- MODAL FAQ -->
 <div id="faqModal" class="side-modal">
   <div class="side-modal-content">
     <div class="side-modal-header">
