--- a/Front-end/pages/Login.html
+++ b/Front-end/pages/Login.html
@@ -16,7 +16,6 @@
 </head>
 <body>
 
-<!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbar-overlay py-3">
   <div class="container">
     <a class="navbar-brand fw-bold" href="../index.html">H&B SPA</a>
@@ -80,25 +79,24 @@
       <div class="col-lg-11">
         <div class="d-lg-flex shadow rounded overflow-hidden" style="min-height: 560px;">
 
-          <!-- Carrusel -->
           <div class="col-lg-7 p-0">
             <div id="loginCarousel" class="carousel slide h-100" data-bs-ride="carousel">
               <div class="carousel-inner h-100">
-                <div class="carousel-item active h-100" style="background-image: url('https://images.unsplash.com/photo-1545205597-3d9d02c29597?w=1600&q=80'); background-size: cover; background-position: center;">
+                <div class="carousel-item active h-100" style="background-image: url('../images/Nuevas/IMG_20251027_223454.jpg'); background-size: cover; background-position: center;">
                   <div class="hero-overlay"></div>
                   <div class="carousel-caption d-flex flex-column justify-content-center align-items-center text-center">
                     <h3 class="text-white fw-bold">Relajación Pura</h3>
                     <p class="text-white">Vive la experiencia H&B Spa</p>
                   </div>
                 </div>
-                <div class="carousel-item h-100" style="background-image: url('https://images.unsplash.com/photo-1540555700478-4be289fbecef?w=1600&q=80'); background-size: cover; background-position: center;">
+                <div class="carousel-item h-100" style="background-image: url('../images/Nuevas/1000483929.jpg'); background-size: cover; background-position: center;">
                   <div class="hero-overlay"></div>
                   <div class="carousel-caption d-flex flex-column justify-content-center align-items-center text-center">
                     <h3 class="text-white fw-bold">Cuidado Profesional</h3>
                     <p class="text-white">Tratamientos especializados en bienestar</p>
                   </div>
                 </div>
-                <div class="carousel-item h-100" style="background-image: url('https://images.unsplash.com/photo-1544161515-4ab6ce6db874?w=1600&q=80'); background-size: cover; background-position: center;">
+                <div class="carousel-item h-100" style="background-image: url('../images/Nuevas/1000484126.jpg'); background-size: cover; background-position: center;">
                   <div class="hero-overlay"></div>
                   <div class="carousel-caption d-flex flex-column justify-content-center align-items-center text-center">
                     <h3 class="text-white fw-bold">Bienestar & Belleza</h3>
@@ -115,7 +113,6 @@
             </div>
           </div>
 
-          <!-- Formulario -->
           <div class="col-lg-5 p-4 d-flex flex-column justify-content-center animate-login glass-card">
             <h2 class="text-center mb-4" style="color: var(--gris-humo); font-weight: 700;">Iniciar Sesión</h2>
 
@@ -136,7 +133,6 @@
   </div>
   <div class="invalid-feedback">La contraseña debe tener al menos 6 caracteres.</div>
 </div>
-
 
               <div class="text-center mb-3">
                 <p class="mb-2">¿Aún no tienes una cuenta? <a href="./Register.html" class="text-decoration-none fw-bold" style="color: var(--turquesa-pastel);">Regístrate</a></p>
@@ -160,7 +156,6 @@
   </div>
 </section>
 
-<!-- FOOTER -->
 <footer class="pt-5 pb-3" id="contacto" style="margin-top: 0;">
   <div class="container">
     <div class="d-flex justify-content-evenly flex-wrap text-center text-md-start">
@@ -205,9 +200,7 @@
   </div>
 </footer>
 
-<!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Tu lógica de login (llama /api/auth/login y redirige a profile.html) -->
 <script defer src="../scripts/login.js"></script>
 <script defer src="/Front-end/scripts/auth-ui.js"></script>
 <script defer src="../scripts/auth-ui.js"></script>
