--- a/Front-end/pages/aviso_privacidad.html
+++ b/Front-end/pages/aviso_privacidad.html
@@ -28,7 +28,6 @@
                 <li class="nav-item"><a class="nav-link" href="./Contact.html">Contacto</a></li>
             </ul>
 
-            <!-- Botones móviles -->
             <div class="nav-mobile-actions d-lg-none mt-3 d-flex gap-3 justify-content-center">
                 <a href="#" class="nav-icon-btn-mobile" id="openFaqBtnMobile">
                     <i class="bi bi-question-circle me-2"></i>FAQ
@@ -50,7 +49,7 @@
             </div>
         </div>
 
-        <!-- Botones desktop -->
+ 
         <div class="d-none d-lg-flex ms-3 align-items-center gap-2">
             <a href="#" class="nav-icon-btn" id="openCartBtn" title="Carrito de Compras">
                 <i class="bi bi-cart3"></i>
@@ -101,7 +100,7 @@
           <li>Envío de información promocional</li>
           <li>Encuestas de satisfacción</li>
         </ul>
-        <p>Puede solicitar la exclusión de finalidades adicionales escribiendo a: <a href="mailto:h&bspa@gmail.com">h&bspa@gmail.com</a></p>
+        <p>Puede solicitar la exclusión de finalidades adicionales escribiendo a: <a href="mailto:hbspa.contacto@gmail.com">hbspa.contacto@gmail.com</a></p>
       </section>
 
       <section>
@@ -114,7 +113,7 @@
         <p>Puede ejercer sus derechos de acceso, rectificación, cancelación u oposición enviando una solicitud a:</p>
         <ul>
           <li>Nombre: Miriam Velasco García</li>
-          <li>Correo: <a href="mailto:h&bspa@gmail.com">h&bspa@gmail.com</a></li>
+          <li>Correo: <a href="mailto:hbspa.contacto@gmail.com">hbspa.contacto@gmail.com</a></li>
           <li>Teléfono: 55 62 31 63 02</li>
           <li>Domicilio: Calle Genaro García 357, Jardín Balbuena, CDMX</li>
         </ul>
@@ -123,7 +122,7 @@
 
       <section>
         <h4>Revocación y limitación de uso</h4>
-        <p>Para revocar el consentimiento o limitar la divulgación de sus datos, escriba a: <a href="mailto:h&bspa@gmail.com">h&bspa@gmail.com</a></p>
+        <p>Para revocar el consentimiento o limitar la divulgación de sus datos, escriba a: <a href="mailto:hbspa.contacto@gmail.com">hbspa.contacto@gmail.com</a></p>
         <p>La respuesta será enviada en un plazo máximo de 20 días hábiles.</p>
       </section>
 
@@ -139,7 +138,6 @@
     </div>
   </main>
 
-<!-- FOOTER -->
 <footer class="pt-5 pb-3" id="contacto" style="margin-top: 0;">
   <div class="container">
     <div class="d-flex justify-content-evenly flex-wrap text-center text-md-start">
@@ -152,7 +150,6 @@
         <p class="text-muted"><i class="bi bi-envelope-fill me-2"></i>contacto@hbspa.com</p>
       </div>
 
-      <!-- Columna 2 -->
       <div class="mb-4">
         <h5 class="fw-bold mb-3">Enlaces Rápidos</h5>
         <ul class="list-unstyled">
@@ -164,7 +161,6 @@
         </ul>
       </div>
 
-      <!-- Columna 3 -->
       <div class="mb-4">
         <h5 class="fw-bold mb-3">Síguenos</h5>
         <div class="d-flex justify-content-start gap-3 mb-3">
@@ -181,7 +177,6 @@
       </div>
     </div>
 
-    <!-- Divider y copyright igual -->
     <hr class="my-4">
     <div class="row">
       <div class="col-12 text-center">
@@ -195,7 +190,6 @@
   </div>
 </footer>
 
-<!-- MODAL FAQ -->
 <div id="faqModal" class="side-modal">
   <div class="side-modal-content">
     <div class="side-modal-header">
@@ -212,17 +206,11 @@
   </div>
 </div>
 
-
-
-
-
-<!-- BOTÓN FLOTANTE FAQ -->
 <button id="floatingFaqBtn" class="floating-faq-btn" title="Preguntas Frecuentes">
   <i class="bi bi-question-circle-fill"></i>
 </button>
 
-<!-- Scripts -->
- <script src="../scripts/servicios.js"></script>
+<script src="../scripts/servicios.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="../scripts/faq-data.js"></script>
 <script src="../scripts/modal-manager-fixed.js"></script>
