--- a/Front-end/pages/recuperarContraseña.html
+++ b/Front-end/pages/recuperarContraseña.html
@@ -81,7 +81,6 @@
         <div class="glass-card animate-login p-4 shadow rounded" style="max-width: 480px; margin: auto;">
           <h2 class="text-center mb-4" style="color: var(--gris-humo); font-weight: 700;">Recuperar Contraseña</h2>
 
-          <!-- Paso 1: solicitar código -->
           <form id="recuperarForm" class="needs-validation" novalidate>
             <div class="mb-3">
               <label for="email" class="form-label">Correo electrónico</label>
@@ -93,12 +92,9 @@
             </div>
           </form>
 
-          <!-- Mensaje del paso 1 -->
           <div id="mensaje" class="mt-3 text-center fw-bold"></div>
 
           <hr class="my-4"/>
-
-          <!-- Paso 2: escribir código y nueva contraseña -->
           <form id="resetForm" class="d-none" novalidate>
             <div class="mb-3">
               <label for="otpCode" class="form-label">Código de verificación</label>
@@ -128,7 +124,6 @@
   </div>
 </section>
 
-<!-- FOOTER -->
 <footer class="pt-5 pb-3" id="contacto" style="margin-top: 0;">
   <div class="container">
     <div class="d-flex justify-content-evenly flex-wrap text-center text-md-start">
@@ -173,10 +168,10 @@
   </div>
 </footer>
 
-<!-- Scripts -->
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Lógica de recuperación (usa /api/auth/password/forgot y /api/auth/password/reset) -->
 <script src="../scripts/recuperacion.js"></script>
 <script defer src="../scripts/auth-ui.js"></script>
+ <script src="../scripts/cart-preview.js"></script>
 </body>
 </html>
