--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="./styles/common.css">
   <link rel="stylesheet" href="./styles/index.css">
+  <link rel="stylesheet" href="./styles/responsive.css">
 
   <link rel="preload" as="image" href="/Front-end/images/Nuevas/1000484075.jpg">
   <link rel="preload" as="image" href="/Front-end/images/Nuevas/1000484102.jpg">
