--- a/Front-end/pages/About.html
+++ b/Front-end/pages/About.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../styles/common.css" />
     <link rel="stylesheet" href="../styles/about.css" />
+    <link rel="stylesheet" href="../styles/responsive.css" />
 </head>
 <body>
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbar-overlay py-3">
