--- a/Front-end/pages/Contact.html
+++ b/Front-end/pages/Contact.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../styles/common.css">
     <link rel="stylesheet" href="../styles/contact.css">
+    <link rel="stylesheet" href="../styles/responsive.css">
     <script defer src="../scripts/validation.js"></script>
 </head>
 <body>
