--- a/Front-end/pages/Register.html
+++ b/Front-end/pages/Register.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="../styles/common.css">
   <!-- Estilos específicos -->
   <link rel="stylesheet" href="../styles/register.css">
+  <link rel="stylesheet" href="../styles/responsive.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark navbar-overlay py-3">
