--- a/Front-end/pages/profile.html
+++ b/Front-end/pages/profile.html
@@ -12,6 +12,7 @@
   <!-- Estilos -->
   <link rel="stylesheet" href="../styles/common.css"/>
   <link rel="stylesheet" href="../styles/profile.css"/>
+  <link rel="stylesheet" href="../styles/responsive.css"/>
 </head>
 <body>
 
