--- a/Front-end/pages/recuperarContraseña.html
+++ b/Front-end/pages/recuperarContraseña.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="../styles/common.css"/>
   <!-- Estilos específicos -->
   <link rel="stylesheet" href="../styles/register.css"/>
+  <link rel="stylesheet" href="../styles/responsive.css"/>
 </head>
 <body>
 
