--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -258,8 +258,8 @@
     <div class="text-center">
       <p class="text-muted mb-0">&copy; 2025 H&B SPA Jardín Balbuena. Todos los derechos reservados.</p>
       <p class="text-muted small mb-0 mt-2">
-          <a href="../Front-end/pages/aviso_privacidad.html" class="text-muted text-decoration-none">Aviso de Privacidad</a> |
-          <a href="../Front-end/pages/terminos_condiciones.html" class="text-muted text-decoration-none">Términos y Condiciones</a>
+          <a href="./pages/aviso_privacidad.html" class="text-muted text-decoration-none">Aviso de Privacidad</a> |
+          <a href="./pages/terminos_condiciones.html" class="text-muted text-decoration-none">Términos y Condiciones</a>
       </p>
     </div>
   </div>
