--- a/Front-end/pages/Login.html
+++ b/Front-end/pages/Login.html
@@ -202,10 +202,11 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script defer src="../scripts/login.js"></script>
-<script defer src="/Front-end/scripts/auth-ui.js"></script>
-<script defer src="../scripts/auth-ui.js"></script>
+<script src="../scripts/faq-data.js"></script>
+<script src="../scripts/modal-manager-fixed.js"></script>
 <script src="../scripts/cart-preview.js"></script>
+<script defer src="../scripts/auth-ui.js"></script>
+<script defer src="../scripts/login.js"></script>
 <script>
   document.addEventListener("DOMContentLoaded", () => {
     const togglePassword = document.querySelector('#togglePassword');
