--- a/Front-end/pages/profile.html
+++ b/Front-end/pages/profile.html
@@ -250,6 +250,10 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../scripts/faq-data.js"></script>
+<script src="../scripts/modal-manager-fixed.js"></script>
+<script src="../scripts/cart-preview.js"></script>
+<script defer src="../scripts/auth-ui.js"></script>
 
 <script>
 function mostrarSeccion(id) {
