--- a/Front-end/pages/recuperarContraseña.html
+++ b/Front-end/pages/recuperarContraseña.html
@@ -171,8 +171,10 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../scripts/faq-data.js"></script>
+<script src="../scripts/modal-manager-fixed.js"></script>
 <script src="../scripts/recuperacion.js"></script>
 <script defer src="../scripts/auth-ui.js"></script>
- <script src="../scripts/cart-preview.js"></script>
+<script src="../scripts/cart-preview.js"></script>
 </body>
 </html>
